@@ -68,16 +68,30 @@ Description: GRand Unified Bootloader, version 2 (dummy package)
 Package: grub-common
 Priority: optional
 Architecture: any-i386 any-amd64 any-powerpc any-ppc64 any-sparc any-mipsel
-Depends: dpkg (>= 1.15.4) | install-info | dpkg (<= 1.14.25), ${shlibs:Depends}, ${misc:Depends}, gettext-base
+Depends: ${shlibs:Depends}, ${misc:Depends}, gettext-base
 Replaces: grub-pc (<< 1.98+20100527-1), grub-ieee1275 (<< 1.98+20100527-1), grub-efi (<< 1.96+20080831-1), grub-coreboot (<< 1.97+20091114-1), grub-linuxbios (<< 1.96+20080831-1), grub-efi-ia32 (<< 1.98+20100527-1), grub-efi-amd64 (<< 1.98+20100527-1), grub-yeeloong (<< 1.98+20100527-1)
 Recommends: os-prober (>= 1.33)
 Suggests: multiboot-doc, grub-emu, xorriso (>= 0.5.6.pl00)
 # See bugs #435983 and #455746
-Conflicts: mdadm (<< 2.6.7-2), grub-doc (<< 0.97-32), grub-legacy-doc (<< 0.97-59)
+Conflicts: mdadm (<< 2.6.7-2)
 Breaks: lupin-support (<< 0.30)
 Multi-Arch: foreign
-Description: GRand Unified Bootloader, version 2 (common files)
+Description: GRand Unified Bootloader (common files)
  This package contains common files shared by the distinct flavours of GRUB.
+ It is shared between GRUB Legacy and GRUB 2, although a number of files
+ specific to GRUB 2 are here as long as they do not break GRUB Legacy.
+
+Package: grub2-common
+Priority: optional
+Architecture: any-i386 any-amd64 any-powerpc any-ppc64 any-sparc any-mipsel
+Depends: grub-common (= ${binary:Version}), dpkg (>= 1.15.4) | install-info | dpkg (<= 1.14.25), ${shlibs:Depends}, ${misc:Depends}
+Replaces: grub, grub-legacy, grub-common (<< 1.99~rc2-1), grub-pc (<< 1.99~rc2-1), grub-ieee1275 (<< 1.99~rc2-1), grub-efi (<< 1.99~rc2-1), grub-coreboot (<< 1.99~rc2-1), grub-linuxbios (<< 1.99~rc2-1), grub-efi-ia32 (<< 1.99~rc2-1), grub-efi-amd64 (<< 1.99~rc2-1), grub-yeeloong (<< 1.99~rc2-1)
+Conflicts: grub (<< 0.97-54), grub-legacy, grub-doc (<< 0.97-32), grub-legacy-doc (<< 0.97-59)
+Multi-Arch: foreign
+Description: GRand Unified Bootloader (common files for version 2)
+ This package contains common files shared by the distinct flavours of GRUB.
+ The files in this package are specific to GRUB 2, and would break GRUB
+ Legacy if installed on the same system.
 
 Package: grub-emu
 Architecture: any-i386 any-amd64 any-powerpc
@@ -91,7 +105,7 @@ Description: GRand Unified Bootloader, version 2 (emulated version)
 Package: grub-pc
 Priority: optional
 Architecture: any-i386 any-amd64
-Depends: ${shlibs:Depends}, ${misc:Depends}, grub-common (= ${binary:Version}), ucf, freebsd-utils (>= 8.0-4) [kfreebsd-any]
+Depends: ${shlibs:Depends}, ${misc:Depends}, grub2-common (= ${binary:Version}), ucf, freebsd-utils (>= 8.0-4) [kfreebsd-any]
 Replaces: grub, grub-legacy, grub2 (<< ${source:Version}), grub-common (<= 1.96+20080413-1), grub-efi-amd64, grub-efi-ia32, grub-coreboot, grub-ieee1275
 Conflicts: grub (<< 0.97-54), grub-legacy, desktop-base (= 4.0.5), grub-efi-amd64, grub-efi-ia32, grub-coreboot, grub-ieee1275
 Suggests: desktop-base (>= 4.0.6)
@@ -127,7 +141,7 @@ Description: GRUB bootable rescue images, version 2 (PC/BIOS version)
 
 Package: grub-coreboot
 Architecture: any-i386 any-amd64
-Depends: ${shlibs:Depends}, grub-common (= ${binary:Version}), ${misc:Depends}, ucf
+Depends: ${shlibs:Depends}, grub2-common (= ${binary:Version}), ${misc:Depends}, ucf
 Replaces: grub-legacy, grub2 (<< ${source:Version}), grub-common (<= 1.96+20080413-1), grub-linuxbios, grub-efi-amd64, grub-efi-ia32, grub-pc, grub-ieee1275
 Conflicts: grub (<< 0.97-54), grub-legacy, grub-linuxbios (<< ${source:Version}), grub-efi-amd64, grub-efi-ia32, grub-pc, grub-ieee1275
 Suggests: os-prober
@@ -147,7 +161,7 @@ Description: GRand Unified Bootloader, version 2 (Coreboot version)
 
 Package: grub-efi-ia32
 Architecture: any-i386 any-amd64
-Depends: ${shlibs:Depends}, grub-common (= ${binary:Version}), ${misc:Depends}, ucf, efibootmgr [i386 amd64]
+Depends: ${shlibs:Depends}, grub2-common (= ${binary:Version}), ${misc:Depends}, ucf, efibootmgr [i386 amd64]
 Replaces: grub, grub-legacy, grub2 (<< ${source:Version}), grub-common (<= 1.96+20080413-1), grub-efi, grub-efi-amd64, grub-pc, grub-coreboot, grub-ieee1275
 Conflicts: grub (<< 0.97-54), grub-legacy, grub-efi-amd64, grub-pc, grub-coreboot, grub-ieee1275
 Suggests: os-prober
@@ -168,7 +182,7 @@ Description: GRand Unified Bootloader, version 2 (EFI-IA32 version)
 
 Package: grub-efi-amd64
 Architecture: i386 kopensolaris-i386 any-amd64
-Depends: ${shlibs:Depends}, grub-common (= ${binary:Version}), ${misc:Depends}, ucf, efibootmgr [i386 amd64]
+Depends: ${shlibs:Depends}, grub2-common (= ${binary:Version}), ${misc:Depends}, ucf, efibootmgr [i386 amd64]
 Replaces: grub, grub-legacy, grub2 (<< ${source:Version}), grub-common (<= 1.96+20080413-1), grub-pc, grub-efi-ia32, grub-coreboot, grub-ieee1275
 Conflicts: grub, grub-legacy, grub-efi-ia32, grub-pc, grub-coreboot, grub-ieee1275
 Suggests: os-prober
@@ -201,7 +215,7 @@ Description: GRUB bootable rescue images, version 2 (EFI-AMD64 version)
 
 Package: grub-ieee1275
 Architecture: any-i386 any-amd64 any-powerpc any-ppc64 any-sparc
-Depends: ${shlibs:Depends}, grub-common (= ${binary:Version}),
+Depends: ${shlibs:Depends}, grub2-common (= ${binary:Version}),
  powerpc-ibm-utils [any-powerpc any-ppc64], powerpc-utils [any-powerpc any-ppc64], bc [any-powerpc any-ppc64], ${misc:Depends}, ucf
 Replaces: grub-legacy, grub2 (<< ${source:Version}), grub-common (<= 1.96+20080413-1), grub-efi-amd64, grub-efi-ia32, grub-coreboot, grub-pc
 Conflicts: grub (<< 0.97-54), grub-legacy, grub-efi-amd64, grub-efi-ia32, grub-coreboot, grub-pc
@@ -241,7 +255,7 @@ Description: GRUB firmware image for QEMU
 
 Package: grub-yeeloong
 Architecture: any-mipsel
-Depends: ${shlibs:Depends}, grub-common (= ${binary:Version}), ${misc:Depends}, ucf
+Depends: ${shlibs:Depends}, grub2-common (= ${binary:Version}), ${misc:Depends}, ucf
 Replaces: grub-common (<< 1.98+20100617-2)
 Suggests: os-prober
 Multi-Arch: foreign
