@@ -20,7 +20,6 @@ usr/sbin/grub-mkconfig
 usr/sbin/grub-mkdevicemap
 usr/sbin/grub-probe
 usr/share/grub
-usr/share/info
 usr/share/locale
 usr/share/man/man1/grub-bin2h.1
 usr/share/man/man1/grub-editenv.1
