@@ -1,0 +1,7 @@
+../../debian/update-grub		usr/sbin
+
+usr/sbin/grub-reboot
+usr/sbin/grub-set-default
+usr/share/info
+usr/share/man/man8/grub-reboot.8
+usr/share/man/man8/grub-set-default.8
